--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                             2016
                         </div>
                         <div class="right-block-content">
-                            <span class="show show-ro">Cursuri de machetator web la ”VANAR-COMERȚ” SRL. Cretificatul poate fi descărcat <a href="#" download>aici.</a></span>
+                            <span class="show show-ro">Cursuri de machetator web la ”VANAR-COMERȚ” SRL. Certificatul poate fi descărcat <a href="#" download>aici.</a></span>
                             <span class="show show-ru">Курсы верстальщика в ”VANAR-COMERȚ” SRL. Свидетельство можно скачать <a href="#" download>здесь.</a></span>
                             <span class="show show-en">Courses of the coder in "VANAR-COMERŢ" SRL. The certificate can be downloaded <a href="#" download>here.</a></span>
                         </div>
