--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="general-info-content show show-en">
                     <h2>spinu vladimir</h2>
                     <h3>Front-End Developer</h3>
-                    <p>I am the beginner Front-end web developer. I want very mach to grow up in this IT area. I will be glad to work in the company which will promote my progress. About me i can say that i am diligent, without pernicios habbits, communicative, punctual, responsible, always ready to learn and to profesional growth.</p>
+                    <p>I am a beginner Front-end web developer. I want very much to grow up in this IT area. I will be glad to work in the company which will promote my progress. About me i can say that i am diligent, without bad habbits, communicative, punctual, responsible, always ready to learn and to profesional growth.</p>
                 </div>
             </div>
 
@@ -311,7 +311,7 @@
                         <div class="right-block-content">
                             <span class="show show-ro">Cursuri de machetator web la ”VANAR-COMERȚ” SRL. Certificatul poate fi descărcat <a href="#" download>aici.</a></span>
                             <span class="show show-ru">Курсы верстальщика в ”VANAR-COMERȚ” SRL. Свидетельство можно скачать <a href="#" download>здесь.</a></span>
-                            <span class="show show-en">Courses of the coder in "VANAR-COMERŢ" SRL. The certificate can be downloaded <a href="#" download>here.</a></span>
+                            <span class="show show-en">Coding courses in "VANAR-COMERŢ" SRL. The certificate can be downloaded <a href="#" download>here.</a></span>
                         </div>
                     </div>
 
