--- a/index.html
+++ b/index.html
@@ -309,9 +309,9 @@
                             2016
                         </div>
                         <div class="right-block-content">
-                            <span class="show show-ro">Cursuri de machetator web la ”VANAR-COMERȚ” SRL. Certificatul poate fi descărcat <a href="img/certificat.pdf" download>aici.</a></span>
-                            <span class="show show-ru">Курсы верстальщика в ”VANAR-COMERȚ” SRL. Свидетельство можно скачать <a href="img/certificat.pdf" download>здесь.</a></span>
-                            <span class="show show-en">Coding courses in "VANAR-COMERŢ" SRL. The certificate can be downloaded <a href="img/certificat.pdf" download>here.</a></span>
+                            <span class="show show-ro">Cursuri de machetator web la ”VANAR-COMERȚ” SRL. Certificatul poate fi descărcat <a href="img/cerificat.pdf" download>aici.</a></span>
+                            <span class="show show-ru">Курсы верстальщика в ”VANAR-COMERȚ” SRL. Свидетельство можно скачать <a href="img/cerificat.pdf" download>здесь.</a></span>
+                            <span class="show show-en">Coding courses in "VANAR-COMERŢ" SRL. The certificate can be downloaded <a href="img/cerificat.pdf" download>here.</a></span>
                         </div>
                     </div>
 
